[package]
name = "test_game"
version = "0.1.0"
authors = ["mwjrink <mwjrink@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
cgmath = "0.18.0"

log = "0.4.11"
simple_logger = "2.1.0"

shrinkwraprs = "0.3.0"

nlvr = { path = "../nlvr" } # { git = "https://github.com/mwjrink/nlvr", branch = "main" }
